--- a/FlutterProjects/hello_flutter_db/pubspec.yaml
+++ b/FlutterProjects/hello_flutter_db/pubspec.yaml
@@ -9,7 +9,9 @@ dependencies:
   flutter:
     sdk: flutter
   hooks_riverpod: 2.4.2
+  path: 1.8.3
   sqflite: 2.3.0
+  sqflite_common_ffi: 2.3.0
 
 dev_dependencies:
   flutter_test:
@@ -20,5 +22,5 @@ dev_dependencies:
 flutter:
   uses-material-design: true
 
-assets:
-  - data/pois.sqlite3
+  assets:
+    - assets/pois.sqlite3
