--- a/FlutterProjects/hello_flutter_db/pubspec.yaml
+++ b/FlutterProjects/hello_flutter_db/pubspec.yaml
@@ -9,6 +9,7 @@ dependencies:
   flutter:
     sdk: flutter
   hooks_riverpod: 2.4.2
+  logger: 2.0.2+1
   path: 1.8.3
   sqflite: 2.3.0
   sqflite_common_ffi: 2.3.0
