--- a/FlutterProjects/hello_flutter_db/pubspec.yaml
+++ b/FlutterProjects/hello_flutter_db/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   path: 1.8.3
   sqflite: 2.3.0
   sqflite_common_ffi: 2.3.0
+  url_launcher: 6.1.14
 
 dev_dependencies:
   flutter_test:
