--- a/FlutterProjects/hello_flutter_db/pubspec.yaml
+++ b/FlutterProjects/hello_flutter_db/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_tts: 3.8.3
   hooks_riverpod: 2.4.2
   logger: 2.0.2+1
   path: 1.8.3
