--- a/FlutterProjects/hello_flutter_http/pubspec.yaml
+++ b/FlutterProjects/hello_flutter_http/pubspec.yaml
@@ -1,4 +1,4 @@
-name: hello_http
+name: hello_flutter_http
 description: A new Flutter project.
 
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
