--- a/FlutterProjects/hello_flutter_http/windows/CMakeLists.txt
+++ b/FlutterProjects/hello_flutter_http/windows/CMakeLists.txt
@@ -1,10 +1,10 @@
 # Project-level configuration.
 cmake_minimum_required(VERSION 3.14)
-project(hello_http LANGUAGES CXX)
+project(hello_flutter_http LANGUAGES CXX)
 
 # The name of the executable created for the application. Change this to change
 # the on-disk name of your application.
-set(BINARY_NAME "hello_http")
+set(BINARY_NAME "hello_flutter_http")
 
 # Explicitly opt in to modern CMake behaviors to avoid warnings with recent
 # versions of CMake.
