--- a/FlutterProjects/hello_flutter_http/windows/runner/Runner.rc
+++ b/FlutterProjects/hello_flutter_http/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "hello_http" "\0"
+            VALUE "FileDescription", "hello_flutter_http" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "hello_http" "\0"
+            VALUE "InternalName", "hello_flutter_http" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2023 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "hello_http.exe" "\0"
-            VALUE "ProductName", "hello_http" "\0"
+            VALUE "OriginalFilename", "hello_flutter_http.exe" "\0"
+            VALUE "ProductName", "hello_flutter_http" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
