--- a/FlutterProjects/hello_flutter_cube_simple/pubspec.yaml
+++ b/FlutterProjects/hello_flutter_cube_simple/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   flutter_cube: 0.1.1
   hooks_riverpod: 2.4.3
   logger: 2.0.2+1
+  vector_math: 2.1.4
 
 dev_dependencies:
   flutter_test:
