--- a/FlutterProjects/hello_flutter_camera/pubspec.yaml
+++ b/FlutterProjects/hello_flutter_camera/pubspec.yaml
@@ -14,7 +14,8 @@ dependencies:
   camera_web: 0.3.2+3
   camera_windows: 0.2.1+8
   hooks_riverpod: 2.4.3
-  logger: 2.0.2+1
+  image_gallery_saver: 2.0.3
+  logging: 1.2.0
   path_provider: 2.1.1
   screenshot: 2.1.0
 
