--- a/FlutterProjects/hello_flutter_cube/pubspec.yaml
+++ b/FlutterProjects/hello_flutter_cube/pubspec.yaml
@@ -12,7 +12,7 @@ dependencies:
     sdk: flutter
   flutter_cube: 0.1.1
   hooks_riverpod: 2.4.3
-  logger: 2.0.2+1
+  logging: 1.2.0
 
 dev_dependencies:
   flutter_test:
