--- a/FlutterProjects/hello_flutter_db/pubspec.yaml
+++ b/FlutterProjects/hello_flutter_db/pubspec.yaml
@@ -10,7 +10,7 @@ dependencies:
     sdk: flutter
   flutter_tts: 3.8.3
   hooks_riverpod: 2.4.2
-  logger: 2.0.2+1
+  logging: 1.2.0
   path: 1.8.3
   sqflite: 2.3.0
   sqflite_common_ffi: 2.3.0
