--- a/FlutterProjects/hello_flutter_http/pubspec.yaml
+++ b/FlutterProjects/hello_flutter_http/pubspec.yaml
@@ -14,7 +14,7 @@ dependencies:
   html: 0.15.4
   http: 1.0.0
   hooks_riverpod: 2.3.6
-  logger: 2.0.2
+  logging: 1.2.0
 
 dev_dependencies:
   flutter_test:
