--- a/FlutterProjects/hello_flutter_method_channel/pubspec.yaml
+++ b/FlutterProjects/hello_flutter_method_channel/pubspec.yaml
@@ -10,7 +10,7 @@ dependencies:
   flutter:
     sdk: flutter
   hooks_riverpod: 2.4.3
-  logger: 2.0.2+1
+  logging: 1.2.0
 
   cupertino_icons: ^1.0.2
 
