--- a/FlutterProjects/hello_flutter_webapp/pubspec.yaml
+++ b/FlutterProjects/hello_flutter_webapp/pubspec.yaml
@@ -13,7 +13,7 @@ dependencies:
     sdk: flutter
   hooks_riverpod: 2.4.3
   http: 1.1.0
-  logger: 2.0.2+1
+  logging: 1.2.0
 
 dev_dependencies:
   flutter_test:
