--- a/FlutterProjects/hello_flutter_isolate/pubspec.yaml
+++ b/FlutterProjects/hello_flutter_isolate/pubspec.yaml
@@ -1,7 +1,6 @@
-name: hello_flutter_ui
+name: hello_flutter_isolate
 description: A new Flutter project.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
-
 version: 1.0.0+1
 
 environment:
@@ -10,7 +9,6 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  go_router: 12.0.1
   hooks_riverpod: 2.4.3
   logging: 1.2.0
 
@@ -21,5 +19,4 @@ dev_dependencies:
   flutter_lints: ^2.0.0
 
 flutter:
-
   uses-material-design: true
