--- a/FlutterProjects/hello_flutter_two_dimensional/pubspec.yaml
+++ b/FlutterProjects/hello_flutter_two_dimensional/pubspec.yaml
@@ -12,8 +12,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  logging: 1.2.0
   hooks_riverpod: 2.4.9
+  logging: 1.2.0
+  two_dimensional_scrollables: 0.0.1
 
 dev_dependencies:
   flutter_test:
