--- a/FlutterProjects/hello_flutter_two_dimensional/pubspec.yaml
+++ b/FlutterProjects/hello_flutter_two_dimensional/pubspec.yaml
@@ -14,7 +14,7 @@ dependencies:
     sdk: flutter
   hooks_riverpod: 2.4.9
   logging: 1.2.0
-  two_dimensional_scrollables: 0.0.1
+  two_dimensional_scrollables: 0.0.5+1
 
 dev_dependencies:
   flutter_test:
@@ -24,3 +24,6 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+
+  assets:
+    - assets/init_data.json
