--- a/FlutterProjects/hello_flutter_two_dimensional/pubspec.yaml
+++ b/FlutterProjects/hello_flutter_two_dimensional/pubspec.yaml
@@ -36,3 +36,9 @@ flutter:
     - assets/images/mark1.png
     - assets/images/mark2.png
     - assets/images/mark3.png
+    - assets/images/mark4.png
+    - assets/images/mark5.png
+    - assets/images/mark6.png
+    - assets/images/mark7.png
+    - assets/images/mark8.png
+    - assets/images/mark9.png
