--- a/FlutterProjects/hello_flutter_two_dimensional/pubspec.yaml
+++ b/FlutterProjects/hello_flutter_two_dimensional/pubspec.yaml
@@ -27,6 +27,7 @@ flutter:
 
   assets:
     - assets/init_data.json
+    - assets/test.json
     - assets/images/floor.png
     - assets/images/rock.png
     - assets/images/wall.png
