--- a/FlutterProjects/hello_flutter_two_dimensional/pubspec.yaml
+++ b/FlutterProjects/hello_flutter_two_dimensional/pubspec.yaml
@@ -12,6 +12,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  file_picker: 6.1.1
   hooks_riverpod: 2.4.9
   logging: 1.2.0
   two_dimensional_scrollables: 0.0.5+1
